# cpp-executable-template

./: .gitignore  CMakeLists.txt  conanfile.txt  main.cpp
include/: sample.h
src/: sample.cpp
test/: CMakeLists.txt  test.cpp
